fieldx/tests/uncompilable/1.80/unused_reader.stderr
error: method `read_tt` is never used
 --> tests/uncompilable/unused_reader.rs:5:20
  |
3 | #[fxstruct(sync)]
  | ----------------- method in this implementation
4 | struct TT {
5 |     #[fieldx(lazy, reader(attributes_fn(deny(dead_code))))]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/uncompilable/unused_reader.rs:5:46
  |
5 |     #[fieldx(lazy, reader(attributes_fn(deny(dead_code))))]
  |                                              ^^^^^^^^^
